packages/aces-amf-lib/tests/Generated_Samples_AMF/valid_AMFs/28_mixed_applied_status.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>Mixed Applied Status - Partial Application</aces:description>
        <aces:author>
            <aces:name>On-Set DIT</aces:name>
            <aces:emailAddress>dit@production.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:5749731d-536d-453d-82af-7cb74036a869</aces:uuid>
    </aces:amfInfo>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>VFX Plates: IDT+Grade Applied, Final Look Pending</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:123ea052-453c-42e7-a2a2-c8fe87dcda08</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>0</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="true">
            <aces:description>Sony Venice SGamut3.Cine to ACES</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v1.5:IDT.Sony.Venice_SLog3_SGamut3.a1.v1</aces:transformId>
        </aces:inputTransform>
        <aces:lookTransform applied="true">
            <aces:description>On-Set Base Grade</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACES_to_ACEScct.a1.0.3</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACEScct_to_ACES.a1.0.3</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:SOPNode>
                <cdl:Slope>1.1 1.0 0.95</cdl:Slope>
                <cdl:Offset>0.0 0.0 0.0</cdl:Offset>
                <cdl:Power>1.0 1.0 1.0</cdl:Power>
            </cdl:SOPNode>
            <cdl:SatNode>
                <cdl:Saturation>1.05</cdl:Saturation>
            </cdl:SatNode>
        </aces:lookTransform>
        <aces:lookTransform applied="false">
            <aces:description>Final Creative Look</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACES_to_ACEScct.a1.0.3</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACEScct_to_ACES.a1.0.3</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:SOPNode>
                <cdl:Slope>1.2 1.05 1.0</cdl:Slope>
                <cdl:Offset>0.02 -0.01 0.0</cdl:Offset>
                <cdl:Power>1.0 0.98 1.0</cdl:Power>
            </cdl:SOPNode>
            <cdl:SatNode>
                <cdl:Saturation>1.15</cdl:Saturation>
            </cdl:SatNode>
        </aces:lookTransform>
        <aces:lookTransform applied="false">
            <aces:description>Alternate Cooler Look</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACES_to_ACEScct.a1.0.3</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACEScct_to_ACES.a1.0.3</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:SOPNode>
                <cdl:Slope>0.95 1.0 1.15</cdl:Slope>
                <cdl:Offset>0.0 0.0 0.01</cdl:Offset>
                <cdl:Power>1.0 1.0 1.0</cdl:Power>
            </cdl:SOPNode>
            <cdl:SatNode>
                <cdl:Saturation>1.1</cdl:Saturation>
            </cdl:SatNode>
        </aces:lookTransform>
        <aces:outputTransform applied="false">
            <aces:description>P3-D65 Limited Output</aces:description>
            <aces:referenceRenderingTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:RRT.a1.0.3</aces:transformId>
            </aces:referenceRenderingTransform>
            <aces:outputDeviceTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:ODT.Academy.P3D65_48nits.a1.1.0</aces:transformId>
            </aces:outputDeviceTransform>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
